--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-scikit-learn==1.3.0
-pandas == 1.5.3
-numpy==1.24.3
-streamlit==1.34.0
-matplotlib==3.7.1
-seaborn==0.12.2
-imblearn==0.11.0
+numpy==1.24.3.
+pandas==1.5.3.
+streamlit==1.34.0.
+seaborn==0.12.2.
+scikit-learn==1.3.0.
+imblearn==0.11.0.
